Corrected dark mode text

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ h2 {
 
 .dark-mode {
   background-color: #333;
-  color: ##0a5858;
+  color: #e6f0f0;
   transition: all 0.4s ease-in;
 }  
 
